<resources>

    <string name="app_name">TaskManager</string>
    <string name="novi_zadatak">Нови задатак</string>
    <string name="statistika">Статистика</string>
    <string name="ime_zadatka">Име задатка</string>
    <string name="opis_zadatka">Опис задатка</string>
    <string name="podsjeti_me_15_min_prije_isteka">Подсјети ме 15 мин прије истека</string>
    <string name="visok">Висок</string>
    <string name="srednji">Средњи</string>
    <string name="nizak">Низак</string>
    <string name="dodaj">Додај</string>
    <string name="otkazi">Откажи</string>
    <string name="sacuvaj">Сачувај</string>
    <string name="obrisi">Обриши</string>
    <string name="ponedeljak">Понедељак</string>
    <string name="utorak">Уторак</string>
    <string name="srijeda">Сриједа</string>
    <string name="cetvrtak">Четвртак</string>
    <string name="petak">Петак</string>
    <string name="subota">Субота</string>
    <string name="nedelja">Недеља</string>
    <string name="sutra">Сутра</string>
    <string name="danas">Данас</string>
    <string name="vrijeme">Вријеме</string>
    <string name="datum">Датум</string>
    <string name="prekosutra">Прекосутра</string>
    <string name="visok_prioritet">Задаци високог приоритета</string>
    <string name="srednjeg_prioriteta">Задаци средњег\nприоритета</string>
    <string name="niskog_prioriteta">Задаци ниског\nприоритета</string>

</resources>