<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context="ra241_2015.pnrs1.rtrk.taskmanager.Activity3">

   <ra241_2015.pnrs1.rtrk.taskmanager.PieChart
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/crveni"/>

    <TextView
        android:id="@+id/text_visok_prioritet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/crveni"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:text="@string/visok_prioritet"
        android:textAlignment="center" />


       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal"
           android:layout_below="@+id/text_visok_prioritet">
           <LinearLayout
               android:layout_width="0dp"
               android:layout_height="wrap_content"
               android:orientation="vertical"
               android:layout_weight="0.5">
                       <ra241_2015.pnrs1.rtrk.taskmanager.PieChart
                           android:layout_width="100dp"
                           android:layout_height="100dp"
                           android:layout_gravity="center"
                           android:id="@+id/zuti"/>

               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_gravity="center"
                   android:text="@string/srednjeg_prioriteta"
                   android:textAlignment="center" />

           </LinearLayout>




           <LinearLayout
               android:layout_width="0dp"
               android:layout_height="wrap_content"
               android:layout_weight="0.5"
               android:orientation="vertical">
                   <ra241_2015.pnrs1.rtrk.taskmanager.PieChart
                       android:layout_width="100dp"
                       android:layout_height="100dp"
                       android:layout_gravity="center"
                       android:id="@+id/zeleni"/>

               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_gravity="center"
                   android:text="@string/niskog_prioriteta"
                   android:textAlignment="center" />
           </LinearLayout>

       </LinearLayout>

</RelativeLayout>